# OpencvLearn

./: .gitignore  README.md  test
test/10/1/src/: image_opencv.cpp
test/10/2/src/: image_opencv.cpp
test/10/3/src/: image_opencv.cpp
test/6/6.2/src/: image_opencv.cpp
test/6/6.3/src/: image_opencv.cpp
test/6/6.4.9/src/: image_opencv.cpp
test/6/6.5/include/: image_opencv.h
test/6/6.5/src/: image_opencv.cpp
test/6/6.6/src/: image_opencv.cpp
test/7/1/src/: image_opencv.cpp
test/7/2/src/: image_opencv.cpp
test/7/3/src/: image_opencv.cpp
test/8/1/src/: image_opencv.cpp
test/8/2/src/: image_opencv.cpp
test/8/3/: CMakeLists.txt
test/8/3/src/: image_opencv.cpp
test/8/6/src/: image_opencv.cpp
test/9/1/: CMakeLists.txt
test/9/1/src/: opencv_test.cpp
test/9/2/include/: opencv_test.h
test/9/2/src/: opencv_test.cpp
test/9/4/src/: opencv_test.cpp
test/9/5/src/: opencv_test.cpp
test/barcode_detect/: CMakeLists.txt
test/barcode_detect/include/: opencv_test.h
test/barcode_detect/src/: opencv_test.cpp
test/example/src/: image_opencv.cpp
test/zbar/zbar/: img_scanner.c
