cmake_minimum_required(VERSION 3.2)
#set(OpenCV_DIR "~/Workspaces/opencv_install/lib/cmake/opencv4")
#set(opencv_include "~/Workspaces/opencv_install/include/opencv4")
project(opencv_test)  
find_package(OpenCV 4.0 REQUIRED)  
include_directories(include ${OPENCV_INCLUDE_DIRS} "~/Workspaces/opencv_install/include/opencv4")
aux_source_directory(src dir_srcs)
add_compile_options(-std=c++11)
add_executable(opencv_test ${dir_srcs})
target_link_libraries(opencv_test ${OpenCV_LIBS})  
#find_package("~/Workspaces/opencv_install/include/opencv4")
